--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
       "dev:server": "nodemon server/src/server.js",
       "build": "webpack --mode production",
       "predeploy": "npm run build",
-      "deploy": "gh-pages -d client",
+      "deploy": "gh-pages -d dist",
       "lint": "eslint ."
     },
     "keywords": [
@@ -45,5 +45,5 @@
       "webpack-cli": "^4.8.0",
       "webpack-dev-server": "^4.0.0"
     },
-    "homepage": "https://yourusername.github.io/tds-escape"
-  }
+    "homepage": "https://kainodev0.github.io/tdsforvk"
+}
