--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
       
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2  # Изменено с v1 на v2
+      - name: Upload pages artifact
+        uses: actions/upload-pages-artifact@v1
         with:
           path: './dist'
 
@@ -49,4 +49,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v1
