--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,14 @@ jobs:
       - name: Install dependencies
         run: npm install
         
+      - name: Create .nojekyll file
+        run: touch .nojekyll
+        
       - name: Build project
         run: npm run build
+        
+      - name: Ensure .nojekyll exists in dist
+        run: touch dist/.nojekyll
         
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
